--- a/pom.xml
+++ b/pom.xml
@@ -3,19 +3,23 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-
-    <parent>
-        <groupId>com.amtsybex.nifais</groupId>
-        <artifactId>nifais-parent-pom</artifactId>
-        <version>1.0</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
-
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.amysybex.nifais</groupId>
+    <groupId>com.sona.test</groupId>
     <artifactId>scratchpad</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
     <properties>
@@ -33,12 +37,12 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
             <scope>provided</scope>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>junit</groupId>
@@ -83,7 +87,7 @@
             <version>4.5.2</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.amtsybex.nifais</groupId>
             <artifactId>nifais_dm</artifactId>
             <version>0.0.1-SNAPSHOT</version>
@@ -94,7 +98,8 @@
             <artifactId>dataaccess</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>provided</scope>
-        </dependency>
+        </dependency>-->
+
         <dependency>
             <groupId>com.github.scopt</groupId>
             <artifactId>scopt_2.11</artifactId>
@@ -104,10 +109,10 @@
     </dependencies>
 
 
-    <build>
+    <!--<build>
         <plugins>
             <plugin>
-                <!-- see http://davidb.github.com/scala-maven-plugin -->
+                &lt;!&ndash; see http://davidb.github.com/scala-maven-plugin &ndash;&gt;
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
                 <version>3.1.3</version>
@@ -119,7 +124,7 @@
                         </goals>
                         <configuration>
                             <args>
-                                <!-- <arg>-make:transitive</arg> -->
+                                &lt;!&ndash; <arg>-make:transitive</arg> &ndash;&gt;
                                 <arg>-dependencyfile</arg>
                                 <arg>${project.build.directory}/.scala_dependencies</arg>
                                 <arg>-deprecation</arg>
@@ -139,8 +144,8 @@
                     <skipTests>true</skipTests>
                     <useFile>false</useFile>
                     <disableXmlReport>true</disableXmlReport>
-                    <!-- If you have classpath issue like NoDefClassError,... -->
-                    <!-- useManifestOnlyJar>false</useManifestOnlyJar -->
+                    &lt;!&ndash; If you have classpath issue like NoDefClassError,... &ndash;&gt;
+                    &lt;!&ndash; useManifestOnlyJar>false</useManifestOnlyJar &ndash;&gt;
                     <includes>
                         <include>**/*Test.*</include>
                         <include>**/*Suite.*</include>
@@ -183,7 +188,7 @@
             </plugin>
 
         </plugins>
-    </build>
+    </build>-->
 
 
 
